[project]
name = "ml-deployment-judgment-outputs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datetime>=5.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pycaret==3.4.0",
    "scikit-learn>=1.5.2",
    "xgboost>=2.1.2",
]
